# LADX-Disassembly

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  Makefile  README.md  STYLE.md  azle.gbc.state  gfx.py  ladx.md5  main.asm  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  sfx.asm
.circleci/: config.yml
docs/: ai_agent_env_plan.md  state_schema.md  zelda_env_readme.md
examples/: manual_debug_viewer.py  random_agent.py
scripts/: text.py
src/: CopyData.asm  ROM map.md  bank0.asm  bank1.asm  bank3.asm  constants.asm  defs.asm  gameplay.asm  gbhw.asm  hram.asm  labels.asm  macros.asm  main.asm  options.asm  rgbdscheck.asm  sfx.asm  wram.asm  x_notes.md
tests/: test_actions_rewards.py  test_backend_contract.py  test_ladx_state_extractor.py  test_ladx_symbols.py
tools/: DumpBanks.c  Z80Dis.c  add-bank-numbers.rb  align_comments.py  background_editor.py  build.bat  comment-align.py  compare.sh  convert_address.py  convert_background.py  convert_color.asm  convert_data_to_asm.py  data_to_asm.py  dump_music.py  entities_parser.py  find-unused-labels.rb  fix-data-sym.rb  fix-sfx-data.rb  generate-disassembly.sh  generate-labels-stubs.sh  generate_background_data.py  generate_disassembly.sh  generate_entities_data.py  generate_map_data.py  generate_music.py  global_address.py  jptable_to_asm.py  local_address.py  map_parser.py  md5sum.sh  peephole-replace.py  resize_tiles.py  rgbasm_version.asm  stats.sh  text.py
zelda_env/: __init__.py  actions.py  env.py  rewards.py  setup_state.py  wrappers.py
(+1013 files in other folders)
