[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zelda-env"
version = "0.1.0"
description = "Gymnasium-compatible 2D Zelda reinforcement learning environments."
requires-python = ">=3.11"
dependencies = [
  "gymnasium>=1.0.0",
  "numpy>=1.26",
  "Pillow>=12.0",
  "pyboy>=2.0.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["zelda_env*"]
